--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,8 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-#one:
-#  name: MyString
-#  email: MyString
+lelouch:
+  name: Lelouch Britannia
+  email: blackknights@gmail.com
+  password_digest: <%= User.digest('password') %>
 
 #two:
 #  name: MyString
