Finish user edit, update, index, and destroy actions

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,7 +4,16 @@ lelouch:
   name: Lelouch Britannia
   email: blackknights@gmail.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
-#two:
-#  name: MyString
-#  email: MyString
+suzaku:
+  name: Kururugi Suzaku
+  email: lancelot@albion.com
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
