Add account activations

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,15 +5,28 @@ lelouch:
   email: blackknights@gmail.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 suzaku:
   name: Kururugi Suzaku
   email: lancelot@albion.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
+charles:
+  name: Charles Britannia
+  email: britanniaemporer@gmail.com
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+  
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 <% end %>
